Corrected the folder structure for styles and control templates. They are now each in their respective folder. They are used in different ways and are different types of resources so they require their own folder.

--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/ControlTemplates/DefaultHorizontalSlider.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/ControlTemplates/DefaultHorizontalSlider.xaml
@@ -2,9 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
         <ResourceDictionary.MergedDictionaries>
-            <ResourceDictionary Source="DefaultIncreaseRepeatButtonStyle.xaml"></ResourceDictionary>
-            <ResourceDictionary Source="DefaultDecreaseRepeatButtonStyle.xaml"></ResourceDictionary>
-            <ResourceDictionary Source="DefaultSliderThumbStyle.xaml"></ResourceDictionary>
+            <ResourceDictionary Source="../Styles/Sliders/DefaultIncreaseRepeatButtonStyle.xaml"></ResourceDictionary>
+            <ResourceDictionary Source="../Styles/Sliders/DefaultDecreaseRepeatButtonStyle.xaml"></ResourceDictionary>
+            <ResourceDictionary Source="../Styles/Sliders/DefaultSliderThumbStyle.xaml"></ResourceDictionary>
         </ResourceDictionary.MergedDictionaries>
     
     <ControlTemplate x:Key="DefaultHorizontalSlider"
