Multiple boy scout improvements - Cleaned up styles - Added new styles for default toggle buttons and volume mute buttons. - Cleaned up the music player control and added comments for easy recognition of controls.

--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/ControlTemplates/DefaultHorizontalSliderTemplate.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/ControlTemplates/DefaultHorizontalSliderTemplate.xaml
@@ -7,7 +7,7 @@
             <ResourceDictionary Source="../Styles/Sliders/DefaultSliderThumbStyle.xaml"></ResourceDictionary>
         </ResourceDictionary.MergedDictionaries>
     
-    <ControlTemplate x:Key="DefaultHorizontalSlider"
+    <ControlTemplate x:Key="DefaultHorizontalSliderTemplate"
                      TargetType="{x:Type Slider}">
         <Grid>
             <Grid.RowDefinitions>
