--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Buttons/VolumeMuteButtonStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Buttons/VolumeMuteButtonStyle.xaml
@@ -1,18 +1,24 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="DefaultButtonStyle" TargetType="Button">
+    <Style x:Key="VolumeMuteButtonStyle" TargetType="Button">
+        <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid>
                         <Border x:Name="OuterBorder" BorderBrush="#B0B0B0" BorderThickness="3,3,0,0" Background="#575C60">
                             <Border x:Name="InnerBorder" BorderBrush="#060100" BorderThickness="0,0,3,3">
-                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
+                                <TextBlock x:Name="Icon" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="{TemplateBinding FontSize}" Text="🔊" />
                             </Border>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
+                        <!-- Change Icon based on Volume -->
+                        <DataTrigger Binding="{Binding Volume}" Value="0">
+                            <Setter TargetName="Icon" Property="TextBlock.Text" Value="🔇" />
+                        </DataTrigger>
+                        <!-- Trigger for IsPressed to change BorderBrush -->
                         <Trigger Property="IsPressed" Value="True">
                             <Setter TargetName="OuterBorder" Property="BorderBrush" Value="#060100" />
                             <Setter TargetName="InnerBorder" Property="BorderBrush" Value="#6789A5" />
