--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Sliders/DefaultIncreaseRepeatButtonStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Sliders/DefaultIncreaseRepeatButtonStyle.xaml
@@ -1,8 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <Style x:Key="DefaultIncreaseRepeatButtonStyle"
-           TargetType="{x:Type RepeatButton}">
+    <Style x:Key="DefaultIncreaseRepeatButtonStyle" TargetType="{x:Type RepeatButton}">
         <Setter Property="SnapsToDevicePixels"
                 Value="true" />
         <Setter Property="OverridesDefaultStyle"
