--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Sliders/DefaultSliderThumbStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Sliders/DefaultSliderThumbStyle.xaml
@@ -1,8 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="DefaultSliderThumbStyle"
-           TargetType="{x:Type Thumb}">
+    <Style x:Key="DefaultSliderThumbStyle" TargetType="{x:Type Thumb}">
         <Setter Property="SnapsToDevicePixels"
                 Value="true" />
         <Setter Property="OverridesDefaultStyle"
